--- a/playpen/playpen.glade
+++ b/playpen/playpen.glade
@@ -82,8 +82,10 @@
               <object class="GtkToolButton" id="edit_gui_button">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="tooltip_text" translatable="yes">Edit user-defined controls with Glade...</property>
                 <property name="label" translatable="yes">Edit GUI...</property>
                 <property name="use_underline">True</property>
+                <property name="stock_id">gtk-edit</property>
               </object>
               <packing>
                 <property name="expand">False</property>
