--- a/playpen/playpen.glade
+++ b/playpen/playpen.glade
@@ -3,6 +3,7 @@
 <interface>
   <requires lib="gtk+" version="3.20"/>
   <requires lib="gtksourceview" version="4.0"/>
+  <object class="GtkEntryBuffer" id="entrybuffer1"/>
   <object class="GtkApplicationWindow" id="main_window">
     <property name="can_focus">False</property>
     <property name="window_position">center</property>
@@ -170,13 +171,107 @@
                     <property name="can_focus">False</property>
                     <property name="orientation">vertical</property>
                     <child>
-                      <object class="GtkSearchBar" id="search_bar">
-                        <property name="name">search_bar</property>
+                      <object class="GtkActionBar">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="search_mode_enabled">True</property>
                         <child>
-                          <placeholder/>
+                          <object class="GtkButton" id="apply_scheme_button">
+                            <property name="label" translatable="yes">Apply scheme</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">True</property>
+                            <property name="tooltip_text" translatable="yes">Apply selected style scheme to code editor</property>
+                          </object>
+                          <packing>
+                            <property name="position">0</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkSourceStyleSchemeChooserButton" id="style_scheme">
+                            <property name="label" translatable="yes">Classic</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">True</property>
+                            <property name="events">GDK_STRUCTURE_MASK | GDK_PROPERTY_CHANGE_MASK</property>
+                            <property name="tooltip_text" translatable="yes">Select style scheme for code editor</property>
+                          </object>
+                          <packing>
+                            <property name="position">1</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkButton" id="search_button">
+                            <property name="label" translatable="yes">Search</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">True</property>
+                            <property name="tooltip_text" translatable="yes">Search in code editor</property>
+                          </object>
+                          <packing>
+                            <property name="position">2</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkSearchEntry" id="search_entry">
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="tooltip_text" translatable="yes">Search text</property>
+                            <property name="hexpand">True</property>
+                            <property name="buffer">entrybuffer1</property>
+                            <property name="primary_icon_name">edit-find-symbolic</property>
+                            <property name="primary_icon_activatable">False</property>
+                            <property name="primary_icon_sensitive">False</property>
+                          </object>
+                          <packing>
+                            <property name="position">3</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkButton" id="replace_button">
+                            <property name="label" translatable="yes">Replace</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">True</property>
+                            <property name="tooltip_text" translatable="yes">Search and replace in code editor</property>
+                          </object>
+                          <packing>
+                            <property name="position">4</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkEntry" id="replacement_entry">
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="tooltip_text" translatable="yes">Replacement for search text</property>
+                            <property name="hexpand">True</property>
+                          </object>
+                          <packing>
+                            <property name="position">5</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkCheckButton" id="check_button_case_sensitive">
+                            <property name="label" translatable="yes">Case sensitive</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">False</property>
+                            <property name="draw_indicator">True</property>
+                          </object>
+                          <packing>
+                            <property name="position">6</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkCheckButton" id="check_button_whole_word">
+                            <property name="label" translatable="yes">Whole word</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">False</property>
+                            <property name="draw_indicator">True</property>
+                          </object>
+                          <packing>
+                            <property name="position">7</property>
+                          </packing>
                         </child>
                       </object>
                       <packing>
@@ -200,7 +295,6 @@
                             <property name="wrap_mode">word</property>
                             <property name="left_margin">2</property>
                             <property name="right_margin">2</property>
-                            <property name="input_purpose">alpha</property>
                             <property name="monospace">True</property>
                             <property name="show_line_numbers">True</property>
                             <property name="show_line_marks">True</property>
