Trying to find the way out (#165).

--- a/playpen/playpen.glade
+++ b/playpen/playpen.glade
@@ -201,7 +201,7 @@
                         </child>
                         <child>
                           <object class="GtkButton" id="search_button">
-                            <property name="label" translatable="yes">Search</property>
+                            <property name="label" translatable="yes">Search again</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
@@ -215,7 +215,7 @@
                           <object class="GtkSearchEntry" id="search_entry">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
-                            <property name="tooltip_text" translatable="yes">Search text</property>
+                            <property name="tooltip_text" translatable="yes">Search text, press enter to start searching</property>
                             <property name="hexpand">True</property>
                             <property name="buffer">entrybuffer1</property>
                             <property name="primary_icon_name">edit-find-symbolic</property>
@@ -236,17 +236,6 @@
                           </object>
                           <packing>
                             <property name="position">4</property>
-                          </packing>
-                        </child>
-                        <child>
-                          <object class="GtkButton" id="replace_all_button">
-                            <property name="label" translatable="yes">Replace all</property>
-                            <property name="visible">True</property>
-                            <property name="can_focus">True</property>
-                            <property name="receives_default">True</property>
-                          </object>
-                          <packing>
-                            <property name="position">5</property>
                           </packing>
                         </child>
                         <child>
@@ -282,6 +271,17 @@
                           </object>
                           <packing>
                             <property name="position">7</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkButton" id="replace_all_button">
+                            <property name="label" translatable="yes">Replace all</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">True</property>
+                          </object>
+                          <packing>
+                            <property name="position">5</property>
                           </packing>
                         </child>
                       </object>
