--- a/playpen/examples/sierpinski/sierpinski-csound.glade
+++ b/playpen/examples/sierpinski/sierpinski-csound.glade
@@ -16,7 +16,7 @@
     <property name="step_increment">0.01</property>
   </object>
   <object class="GtkAdjustment" id="adjustment3">
-    <property name="upper">1</property>
+    <property name="upper">10</property>
     <property name="value">0.29999999999999999</property>
     <property name="step_increment">0.01</property>
     <property name="page_increment">10</property>
@@ -40,8 +40,8 @@
     <property name="page_increment">10</property>
   </object>
   <object class="GtkAdjustment" id="adjustment7">
-    <property name="lower">-1</property>
     <property name="upper">1</property>
+    <property name="value">0.5</property>
     <property name="step_increment">0.01</property>
     <property name="page_increment">10</property>
   </object>
@@ -240,7 +240,7 @@
         <property name="can_focus">True</property>
         <property name="hexpand">True</property>
         <property name="adjustment">adjustment3</property>
-        <property name="fill_level">1</property>
+        <property name="fill_level">10</property>
         <property name="round_digits">4</property>
         <property name="digits">4</property>
         <property name="value_pos">right</property>
