--- a/playpen/examples/sierpinski/sierpinski-csound.ui
+++ b/playpen/examples/sierpinski/sierpinski-csound.ui
@@ -5,7 +5,6 @@
   <object class="GtkAdjustment" id="adjustment1">
     <property name="lower">-50</property>
     <property name="upper">50</property>
-    <property name="value">0</property>
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
     <property name="page_size">10</property>
@@ -146,7 +145,7 @@
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="halign">start</property>
-        <property name="label" translatable="yes">Harpsichord</property>
+        <property name="label" translatable="yes">Waveguide harpsichord</property>
         <attributes>
           <attribute name="weight" value="semibold"/>
         </attributes>
