--- a/playpen/controls-test.ui
+++ b/playpen/controls-test.ui
@@ -1,5 +1,7 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.22.2 -->
 <interface>
-  <requires lib="gtk+" version="3.20" />
+  <requires lib="gtk+" version="3.20"/>
   <object class="GtkAdjustment" id="adjustment1">
     <property name="upper">100</property>
     <property name="step_increment">1</property>
@@ -7,13 +9,14 @@
   </object>
   <object class="GtkAdjustment" id="adjustment2">
     <property name="upper">100</property>
+    <property name="value">50</property>
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
   <object class="GtkPopover" id="gk_popover">
     <property name="can_focus">False</property>
     <child>
-      <placeholder />
+      <placeholder/>
     </child>
   </object>
   <object class="GtkGrid" id="user_controls_layout">
@@ -24,6 +27,7 @@
     <child>
       <object class="GtkButton" id="gk_button">
         <property name="label" translatable="yes">button</property>
+        <property name="name">gk_button</property>
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="receives_default">True</property>
@@ -35,6 +39,7 @@
     </child>
     <child>
       <object class="GtkEntry" id="gk_entry">
+        <property name="name">gk_entry</property>
         <property name="visible">True</property>
         <property name="can_focus">True</property>
       </object>
@@ -44,7 +49,8 @@
       </packing>
     </child>
     <child>
-      <object class="GtkSpinButton" id="gk_spin_button">
+      <object class="GtkSpinButton" id="gk_spinbutton">
+        <property name="name">gk_spinbutton</property>
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="adjustment">adjustment2</property>
@@ -57,6 +63,7 @@
     <child>
       <object class="GtkToggleButton" id="gk_togglebutton">
         <property name="label" translatable="yes">togglebutton</property>
+        <property name="name">gk_togglebutton</property>
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="receives_default">True</property>
@@ -69,6 +76,7 @@
     <child>
       <object class="GtkCheckButton" id="gk_checkbutton">
         <property name="label" translatable="yes">checkbutton</property>
+        <property name="name">gk_checkbutton</property>
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="receives_default">False</property>
@@ -82,12 +90,13 @@
     <child>
       <object class="GtkRadioButton" id="gk_radiobutton">
         <property name="label" translatable="yes">radiobutton</property>
+        <property name="name">gk_radiobutton</property>
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="receives_default">False</property>
         <property name="active">True</property>
         <property name="draw_indicator">True</property>
-        <property name="group">radiobutton1</property>
+        <property name="group">gk_radiobutton1</property>
       </object>
       <packing>
         <property name="left_attach">0</property>
@@ -95,8 +104,9 @@
       </packing>
     </child>
     <child>
-      <object class="GtkRadioButton" id="radiobutton1">
+      <object class="GtkRadioButton" id="gk_radiobutton1">
         <property name="label" translatable="yes">radiobutton</property>
+        <property name="name">gk_radiobutton1</property>
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="receives_default">False</property>
@@ -112,6 +122,7 @@
     </child>
     <child>
       <object class="GtkScaleButton" id="gk_scalebutton">
+        <property name="name">gk_scalebutton</property>
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="focus_on_click">False</property>
@@ -143,6 +154,7 @@
     </child>
     <child>
       <object class="GtkScale" id="gk_scale">
+        <property name="name">gk_scale</property>
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="adjustment">adjustment1</property>
@@ -156,6 +168,7 @@
     </child>
     <child>
       <object class="GtkVolumeButton" id="gk_volumebutton">
+        <property name="name">gk_volumebutton</property>
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="focus_on_click">False</property>
@@ -191,13 +204,14 @@ audio-volume-medium-symbolic</property>
     </child>
     <child>
       <object class="GtkMenuButton" id="gk_menubutton">
+        <property name="name">gk_menubutton</property>
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="focus_on_click">False</property>
         <property name="receives_default">True</property>
         <property name="popover">gk_popover</property>
         <child>
-          <placeholder />
+          <placeholder/>
         </child>
       </object>
       <packing>
@@ -207,6 +221,7 @@ audio-volume-medium-symbolic</property>
     </child>
     <child>
       <object class="GtkSwitch" id="gk_switch">
+        <property name="name">gk_switch</property>
         <property name="visible">True</property>
         <property name="can_focus">True</property>
       </object>
