Setting #168 aside for now.

--- a/playpen/playpen.ui
+++ b/playpen/playpen.ui
@@ -173,7 +173,7 @@
         </child>
         <child>
           <object class="GtkPaned" id="main_pane">
-            <property name="name">main_paned</property>
+            <property name="name">main_pane</property>
             <property name="width-request">-1</property>
             <property name="height-request">-1</property>
             <property name="visible">True</property>
@@ -264,6 +264,17 @@
                           </packing>
                         </child>
                         <child>
+                          <object class="GtkButton" id="replace_all_button">
+                            <property name="label" translatable="yes">Replace all</property>
+                            <property name="visible">True</property>
+                            <property name="can-focus">True</property>
+                            <property name="receives-default">True</property>
+                          </object>
+                          <packing>
+                            <property name="position">5</property>
+                          </packing>
+                        </child>
+                        <child>
                           <object class="GtkEntry" id="replacement_entry">
                             <property name="visible">True</property>
                             <property name="can-focus">True</property>
@@ -296,17 +307,6 @@
                           </object>
                           <packing>
                             <property name="position">7</property>
-                          </packing>
-                        </child>
-                        <child>
-                          <object class="GtkButton" id="replace_all_button">
-                            <property name="label" translatable="yes">Replace all</property>
-                            <property name="visible">True</property>
-                            <property name="can-focus">True</property>
-                            <property name="receives-default">True</property>
-                          </object>
-                          <packing>
-                            <property name="position">5</property>
                           </packing>
                         </child>
                       </object>
@@ -479,7 +479,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkScrolledWindow">
+              <object class="GtkScrolledWindow" id="messages_scroll_window">
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="shadow-type">in</property>
