--- a/playpen/examples/sierpinski/sierpinski-csound.ui
+++ b/playpen/examples/sierpinski/sierpinski-csound.ui
@@ -1,5 +1,7 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.22.2 -->
 <interface>
-  <requires lib="gtk+" version="3.20" />
+  <requires lib="gtk+" version="3.20"/>
   <object class="GtkAdjustment" id="adjustment1">
     <property name="lower">-50</property>
     <property name="upper">50</property>
@@ -100,7 +102,7 @@
         <property name="halign">start</property>
         <property name="label" translatable="yes">Output</property>
         <attributes>
-          <attribute name="weight" value="semibold" />
+          <attribute name="weight" value="semibold"/>
         </attributes>
       </object>
       <packing>
@@ -145,7 +147,7 @@
         <property name="halign">start</property>
         <property name="label" translatable="yes">Waveguide harpsichord</property>
         <attributes>
-          <attribute name="weight" value="semibold" />
+          <attribute name="weight" value="semibold"/>
         </attributes>
       </object>
       <packing>
@@ -333,10 +335,10 @@
       </packing>
     </child>
     <child>
-      <placeholder />
+      <placeholder/>
     </child>
     <child>
-      <placeholder />
+      <placeholder/>
     </child>
   </object>
 </interface>
